# CGLab3

./: .gitignore  CMakeLists.txt  README.md  curve.cpp  curve.hpp  geom_object.hpp  geometry.cpp  geometry.hpp  graphics.cpp  graphics.hpp  main.cpp
